# rustsandbox

./: Cargo.toml
polarsexamples/: Cargo.toml
polarsexamples/src/: main.rs
resources/data/: out.arrow
