[package]
name = "polarsexamples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
arrow = "44.0.0"
bytes = "1.4.0"
chrono = "0.4.26"
chrono-tz = "0.8.3"
itertools = "0.11.0"
polars = "0.31.1"
